@@ -8,6 +8,12 @@
 	* The XMIME/XMTP parser and serializer how handles all text/*
 	MIME types, not just text/plain.
 
+	* ESXX.include now takes a secondary argument, scope, which
+	can be used to specify in what scope the included file should 
+	be evaluated in.  If unspecified, the global scope is used
+	just like before.
+
+
 0.9.20081101
 	* Bug fixes as usual.
 
